--- a/style.css
+++ b/style.css
@@ -14,9 +14,22 @@ input{
     margin-top: 10vh;
 }
 
-#e{
+#searches{
     text-align: center;
 }
+
+@media (min-width: 600px) {
+    .searchBar{
+        width: 500px;
+    }
+}
+
+@media (max-width: 599px) {
+    .searchBar{
+        width: 375px;
+    }
+}
+
 
 
 #google{
@@ -24,7 +37,7 @@ input{
 }
 
 
-    #yt{
+#yt{
     margin-bottom: 50px;
 }
 
@@ -33,7 +46,7 @@ input{
     border-radius: 500px;
     padding-left: 20px;
     height: 50px;
-    width: 500px;
+    /* width: 500px; */
     
     border-color: rgb(211, 211, 211);
     border-style: solid;
